--- a/src/app/components/home/mealplan/mealplan.component.html
+++ b/src/app/components/home/mealplan/mealplan.component.html
@@ -14,6 +14,8 @@
             </tr>
         </table>
     </div>
+    <br />
 </div>
 
-<button mat-raised-button style="background-color: #FFE200;color: #000000; margin: 16px;" mat-button (click)="downloadPDF()">Save</button>
+<button mat-raised-button style="background-color: #FFE200;color: #000000; margin: 16px;" mat-button
+    (click)="downloadPDF()">Save</button>
