--- a/src/app/components/home/mealplan/mealplan.component.html
+++ b/src/app/components/home/mealplan/mealplan.component.html
@@ -1,23 +1,27 @@
-<div id="parentdiv" style="margin: 10px;">
-    <div style="margin-bottom: 10px;" *ngFor="let meal of plannedMeal">
-        <h2>{{meal.type}}</h2>
-        <table>
-            <tr>
-                <th>Food</th>
-                <th>Calories</th>
-                <th>Quantity</th>
-            </tr>
-            <tr *ngFor="let option of meal.options">
-                <td>{{option.food}}</td>
-                <td>{{option.calories}}</td>
-                <td>{{option.quantity}}</td>
-            </tr>
-        </table>
-    </div>
-    <br />
+<div id="parentdiv">
+    <mat-card>
+        <mat-card-content>
+            <div style="margin-bottom: 10px;" *ngFor="let meal of plannedMeal">
+                <h2>{{meal.type}}</h2>
+                <table>
+                    <tr>
+                        <th>Food</th>
+                        <th>Calories</th>
+                        <th>Quantity</th>
+                    </tr>
+                    <tr *ngFor="let option of meal.options">
+                        <td>{{option.food}}</td>
+                        <td>{{option.calories}}</td>
+                        <td>{{option.quantity}}</td>
+                    </tr>
+                </table>
+            </div>
+        </mat-card-content>
+    </mat-card>
 </div>
 
 <button mat-raised-button style="background-color: #FFE200;color: #000000; margin: 16px; float:right" mat-button
     (click)="downloadPDF()"><span class="material-icons">
         get_app
-    </span></button>
+    </span>
+</button>
